[package]
name = "rtag"
version = "0.3.5"
authors = ["Changseok Han <freestrings@gmail.com>"]
description = "Library for reading and writing a id3 metadata"
repository = "https://github.com/freestrings/rtag"
license = "MIT"
keywords = ["library", "id3", "music", "mp3"]
include = ["src/*.rs", "tests/*.rs", "Cargo.toml"]


[dependencies]
encoding = "0.2"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
log = "0.3"
regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dev-dependencies]
env_logger = "0.3"
tempdir = "0.3"